# app.js
@@ -8,6 +8,7 @@ const log4js = require("./config/log4js");
 const logger = log4js.getLogger("app.js");
 const userRoutes = require("./routes/user");
 const JenisKendaraanRoutes = require("./routes/jenis_kendaraan");
+const KriteriaPenilaianRoutes = require("./routes/kriteria_penilaian");
 
 const { buildError } = require("express-ez-405");
 
@@ -46,6 +47,7 @@ app.use((req, res, next) => {
 
 app.use("/api/user", userRoutes);
 app.use("/api/jeniskendaraan", JenisKendaraanRoutes);
+app.use("/api/kriteriapenilaian", KriteriaPenilaianRoutes);
 
 const awaitHandler = (fn) => {
   return async (req, res, next) => {
